parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    RBRACE
    APOSTROPHE
    LBRACE
    CLRSCR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMI declaration_initial BEGIN declarations END DOT
Rule 2     declaration_initial -> uses_declaration
Rule 3     declaration_initial -> declaracion_variables
Rule 4     declaration_initial -> uses_declaration declaration_initial
Rule 5     declaration_initial -> declaracion_variables declaration_initial
Rule 6     declaracion_variables -> VAR var_declaration COLON type_specifier SEMI
Rule 7     declaracion_variables -> VAR var_declaration COLON IP SEMI
Rule 8     declaracion_variables -> const_declaration
Rule 9     const_declaration -> CONST ID NUMBER SEMI
Rule 10    var_declaration -> ID
Rule 11    var_declaration -> ID COMMA var_declaration
Rule 12    type_specifier -> INTEGER
Rule 13    type_specifier -> CHAR
Rule 14    type_specifier -> BYTE
Rule 15    type_specifier -> REAL
Rule 16    type_specifier -> SINGLE
Rule 17    type_specifier -> DOUBLE
Rule 18    type_specifier -> STRING
Rule 19    type_specifier -> BOOLEAN
Rule 20    type_specifier -> IP
Rule 21    type_specifier -> ARRAY LBLOCK NUMBER DOT DOT NUMBER RBLOCK OF type_specifier SEMI
Rule 22    uses_declaration -> USES ID SEMI
Rule 23    declarations -> write_declaration
Rule 24    declarations -> write_declaration declarations
Rule 25    declarations -> readln_declaration
Rule 26    declarations -> readln_declaration declarations
Rule 27    declarations -> declaracion_variables
Rule 28    declarations -> declaracion_variables declarations
Rule 29    declarations -> stament
Rule 30    declarations -> stament declarations
Rule 31    declarations -> var_assignation
Rule 32    declarations -> var_assignation declarations
Rule 33    declarations -> class_declaration
Rule 34    declarations -> class_declaration declarations
Rule 35    declarations -> functions_declarations
Rule 36    declarations -> functions_declarations declarations
Rule 37    declarations -> pointer_assignation
Rule 38    declarations -> pointer_assignation declarations
Rule 39    declarations -> class_assignation
Rule 40    declarations -> class_assignation declarations
Rule 41    class_assignation -> ID ID EQ NEW ID LPARENT parameters_method RPARENT SEMI
Rule 42    class_assignation -> ID ID EQ NEW ID LPARENT RPARENT SEMI
Rule 43    pointer_assignation -> ID MINUS GT ID SEMI
Rule 44    class_declaration -> op_empaquetamiento CLASS ID BEGIN class_statements END SEMI
Rule 45    class_statements -> var_into_class
Rule 46    class_statements -> var_into_class class_statements
Rule 47    class_statements -> method_declaration
Rule 48    class_statements -> method_declaration class_statements
Rule 49    var_into_class -> op_empaquetamiento declaracion_variables
Rule 50    method_declaration -> op_empaquetamiento ID LPARENT parameters_method RPARENT BEGIN declarations END SEMI
Rule 51    parameters_method -> ID
Rule 52    parameters_method -> ID COMMA parameters_method
Rule 53    op_empaquetamiento -> PUBLIC
Rule 54    op_empaquetamiento -> PRIVATE
Rule 55    var_assignation -> array_assignation
Rule 56    var_assignation -> op_var ASSIGN arith_operation SEMI
Rule 57    var_assignation -> op_var ASSIGN STRINGVAL SEMI
Rule 58    var_assignation -> op_var ASSIGN IPVAL SEMI
Rule 59    var_assignation -> op_var ASSIGN op_var SEMI
Rule 60    array_assignation -> ID LBLOCK NUMBER RBLOCK ASSIGN operation SEMI
Rule 61    array_assignation -> ID LBLOCK ID RBLOCK ASSIGN operation SEMI
Rule 62    array_assignation -> ID LBLOCK array_assignation RBLOCK ASSIGN operation SEMI
Rule 63    array_assignation -> array_call
Rule 64    arith_operation -> op_var op_arith op_var
Rule 65    arith_operation -> op_var op_arith arith_operation
Rule 66    arith_operation -> operation
Rule 67    operation -> op_var
Rule 68    operation -> operation op_arith operation
Rule 69    operation -> LPARENT operation RPARENT
Rule 70    stament -> while_declaration
Rule 71    stament -> for_declaration
Rule 72    stament -> if_declaration
Rule 73    stament -> declarations ID ASSIGN
Rule 74    stament -> ID LPARENT declarations RPARENT
Rule 75    stament -> BREAK SEMI
Rule 76    while_declaration -> WHILE relation DO BEGIN declarations END SEMI
Rule 77    for_declaration -> FOR assignation TO op_var DO BEGIN declarations END SEMI
Rule 78    function_call -> ID LPARENT var_declaration RPARENT
Rule 79    assignation -> op_var ASSIGN op_var
Rule 80    if_declaration -> IF relacion_if THEN BEGIN declarations else_stament END SEMI
Rule 81    relation -> op_var
Rule 82    relation -> operation
Rule 83    relation -> relation op_logic relation
Rule 84    relation -> LPARENT relation RPARENT
Rule 85    relacion_if -> relation
Rule 86    relacion_if -> LPARENT op_var op_arith op_var RPARENT op_logic op_var
Rule 87    else_stament -> ELSE declarations
Rule 88    else_stament -> <empty>
Rule 89    write_declaration -> WRITE LPARENT op_write RPARENT SEMI
Rule 90    op_write -> string_sentence
Rule 91    op_write -> op_var
Rule 92    op_write -> array_call
Rule 93    op_write -> op_write COMMA op_write
Rule 94    array_call -> ID LBLOCK op_var RBLOCK
Rule 95    string_sentence -> STRINGVAL
Rule 96    string_sentence -> STRINGVAL PLUS ID
Rule 97    string_sentence -> STRINGVAL PLUS string_sentence
Rule 98    readln_declaration -> READLN LPARENT ID RPARENT SEMI
Rule 99    op_var -> ID
Rule 100   op_var -> NUMBER
Rule 101   op_var -> array_call
Rule 102   op_var -> function_call
Rule 103   op_arith -> PLUS
Rule 104   op_arith -> MINUS
Rule 105   op_arith -> TIMES
Rule 106   op_arith -> DIVIDE
Rule 107   op_arith -> MOD
Rule 108   op_logic -> EQ
Rule 109   op_logic -> NE
Rule 110   op_logic -> LT
Rule 111   op_logic -> LE
Rule 112   op_logic -> GT
Rule 113   op_logic -> GE
Rule 114   op_logic -> LNOT
Rule 115   op_logic -> LOR
Rule 116   op_logic -> LAND
Rule 117   op_logic -> LXOR
Rule 118   functions_declarations -> FUNCTION ID LPARENT parameters RPARENT COLON type_specifier SEMI VAR declaration_function_initial BEGIN declarations END SEMI
Rule 119   parameters -> ID end_parameters
Rule 120   parameters -> ID COMMA parameters
Rule 121   end_parameters -> COLON type_specifier
Rule 122   declaration_function_initial -> ID COLON type_specifier SEMI
Rule 123   declaration_function_initial -> ID COLON type_specifier SEMI declaration_function_initial

Terminals, with rules where they appear

APOSTROPHE           : 
ARRAY                : 21
ASSIGN               : 56 57 58 59 60 61 62 73 79
BEGIN                : 1 44 50 76 77 80 118
BOOLEAN              : 19
BREAK                : 75
BYTE                 : 14
CHAR                 : 13
CLASS                : 44
CLRSCR               : 
COLON                : 6 7 118 121 122 123
COMMA                : 11 52 93 120
CONST                : 9
DIVIDE               : 106
DO                   : 76 77
DOT                  : 1 21 21
DOUBLE               : 17
ELSE                 : 87
END                  : 1 44 50 76 77 80 118
EQ                   : 41 42 108
FOR                  : 77
FUNCTION             : 118
GE                   : 113
GT                   : 43 112
ID                   : 1 9 10 11 22 41 41 41 42 42 42 43 43 44 50 51 52 60 61 61 62 73 74 78 94 96 98 99 118 119 120 122 123
IF                   : 80
INTEGER              : 12
IP                   : 7 20
IPVAL                : 58
LAND                 : 116
LBLOCK               : 21 60 61 62 94
LBRACE               : 
LE                   : 111
LNOT                 : 114
LOR                  : 115
LPARENT              : 41 42 50 69 74 78 84 86 89 98 118
LT                   : 110
LXOR                 : 117
MINUS                : 43 104
MOD                  : 107
NE                   : 109
NEW                  : 41 42
NUMBER               : 9 21 21 60 100
OF                   : 21
PLUS                 : 96 97 103
PRIVATE              : 54
PROGRAM              : 1
PUBLIC               : 53
RBLOCK               : 21 60 61 62 94
RBRACE               : 
READLN               : 98
REAL                 : 15
RPARENT              : 41 42 50 69 74 78 84 86 89 98 118
SEMI                 : 1 6 7 9 21 22 41 42 43 44 50 56 57 58 59 60 61 62 75 76 77 80 89 98 118 118 122 123
SINGLE               : 16
STRING               : 18
STRINGVAL            : 57 95 96 97
THEN                 : 80
TIMES                : 105
TO                   : 77
USES                 : 22
VAR                  : 6 7 118
WHILE                : 76
WRITE                : 89
error                : 

Nonterminals, with rules where they appear

arith_operation      : 56 65
array_assignation    : 55 62
array_call           : 63 92 101
assignation          : 77
class_assignation    : 39 40
class_declaration    : 33 34
class_statements     : 44 46 48
const_declaration    : 8
declaracion_variables : 3 5 27 28 49
declaration_function_initial : 118 123
declaration_initial  : 1 4 5
declarations         : 1 24 26 28 30 32 34 36 38 40 50 73 74 76 77 80 87 118
else_stament         : 80
end_parameters       : 119
for_declaration      : 71
function_call        : 102
functions_declarations : 35 36
if_declaration       : 72
method_declaration   : 47 48
op_arith             : 64 65 68 86
op_empaquetamiento   : 44 49 50
op_logic             : 83 86
op_var               : 56 57 58 59 59 64 64 65 67 77 79 79 81 86 86 86 91 94
op_write             : 89 93 93
operation            : 60 61 62 66 68 68 69 82
parameters           : 118 120
parameters_method    : 41 50 52
pointer_assignation  : 37 38
programa             : 0
readln_declaration   : 25 26
relacion_if          : 80
relation             : 76 83 83 84 85
stament              : 29 30
string_sentence      : 90 97
type_specifier       : 6 21 118 121 122 123
uses_declaration     : 2 4
var_assignation      : 31 32
var_declaration      : 6 7 11 78
var_into_class       : 45 46
while_declaration    : 70
write_declaration    : 23 24

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMI declaration_initial BEGIN declarations END DOT

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMI declaration_initial BEGIN declarations END DOT

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMI declaration_initial BEGIN declarations END DOT

    SEMI            shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMI . declaration_initial BEGIN declarations END DOT
    (2) declaration_initial -> . uses_declaration
    (3) declaration_initial -> . declaracion_variables
    (4) declaration_initial -> . uses_declaration declaration_initial
    (5) declaration_initial -> . declaracion_variables declaration_initial
    (22) uses_declaration -> . USES ID SEMI
    (6) declaracion_variables -> . VAR var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> . VAR var_declaration COLON IP SEMI
    (8) declaracion_variables -> . const_declaration
    (9) const_declaration -> . CONST ID NUMBER SEMI

    USES            shift and go to state 8
    VAR             shift and go to state 10
    CONST           shift and go to state 7

    declaration_initial            shift and go to state 9
    const_declaration              shift and go to state 6
    declaracion_variables          shift and go to state 5
    uses_declaration               shift and go to state 11

state 5

    (3) declaration_initial -> declaracion_variables .
    (5) declaration_initial -> declaracion_variables . declaration_initial
    (2) declaration_initial -> . uses_declaration
    (3) declaration_initial -> . declaracion_variables
    (4) declaration_initial -> . uses_declaration declaration_initial
    (5) declaration_initial -> . declaracion_variables declaration_initial
    (22) uses_declaration -> . USES ID SEMI
    (6) declaracion_variables -> . VAR var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> . VAR var_declaration COLON IP SEMI
    (8) declaracion_variables -> . const_declaration
    (9) const_declaration -> . CONST ID NUMBER SEMI

    BEGIN           reduce using rule 3 (declaration_initial -> declaracion_variables .)
    USES            shift and go to state 8
    VAR             shift and go to state 10
    CONST           shift and go to state 7

    declaracion_variables          shift and go to state 5
    const_declaration              shift and go to state 6
    declaration_initial            shift and go to state 12
    uses_declaration               shift and go to state 11

state 6

    (8) declaracion_variables -> const_declaration .

    WRITE           reduce using rule 8 (declaracion_variables -> const_declaration .)
    READLN          reduce using rule 8 (declaracion_variables -> const_declaration .)
    VAR             reduce using rule 8 (declaracion_variables -> const_declaration .)
    ID              reduce using rule 8 (declaracion_variables -> const_declaration .)
    BREAK           reduce using rule 8 (declaracion_variables -> const_declaration .)
    FUNCTION        reduce using rule 8 (declaracion_variables -> const_declaration .)
    CONST           reduce using rule 8 (declaracion_variables -> const_declaration .)
    WHILE           reduce using rule 8 (declaracion_variables -> const_declaration .)
    FOR             reduce using rule 8 (declaracion_variables -> const_declaration .)
    IF              reduce using rule 8 (declaracion_variables -> const_declaration .)
    NUMBER          reduce using rule 8 (declaracion_variables -> const_declaration .)
    PUBLIC          reduce using rule 8 (declaracion_variables -> const_declaration .)
    PRIVATE         reduce using rule 8 (declaracion_variables -> const_declaration .)
    END             reduce using rule 8 (declaracion_variables -> const_declaration .)
    RPARENT         reduce using rule 8 (declaracion_variables -> const_declaration .)
    ELSE            reduce using rule 8 (declaracion_variables -> const_declaration .)
    USES            reduce using rule 8 (declaracion_variables -> const_declaration .)
    BEGIN           reduce using rule 8 (declaracion_variables -> const_declaration .)


state 7

    (9) const_declaration -> CONST . ID NUMBER SEMI

    ID              shift and go to state 13


state 8

    (22) uses_declaration -> USES . ID SEMI

    ID              shift and go to state 14


state 9

    (1) programa -> PROGRAM ID SEMI declaration_initial . BEGIN declarations END DOT

    BEGIN           shift and go to state 15


state 10

    (6) declaracion_variables -> VAR . var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> VAR . var_declaration COLON IP SEMI
    (10) var_declaration -> . ID
    (11) var_declaration -> . ID COMMA var_declaration

    ID              shift and go to state 17

    var_declaration                shift and go to state 16

state 11

    (2) declaration_initial -> uses_declaration .
    (4) declaration_initial -> uses_declaration . declaration_initial
    (2) declaration_initial -> . uses_declaration
    (3) declaration_initial -> . declaracion_variables
    (4) declaration_initial -> . uses_declaration declaration_initial
    (5) declaration_initial -> . declaracion_variables declaration_initial
    (22) uses_declaration -> . USES ID SEMI
    (6) declaracion_variables -> . VAR var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> . VAR var_declaration COLON IP SEMI
    (8) declaracion_variables -> . const_declaration
    (9) const_declaration -> . CONST ID NUMBER SEMI

    BEGIN           reduce using rule 2 (declaration_initial -> uses_declaration .)
    USES            shift and go to state 8
    VAR             shift and go to state 10
    CONST           shift and go to state 7

    declaration_initial            shift and go to state 18
    const_declaration              shift and go to state 6
    declaracion_variables          shift and go to state 5
    uses_declaration               shift and go to state 11

state 12

    (5) declaration_initial -> declaracion_variables declaration_initial .

    BEGIN           reduce using rule 5 (declaration_initial -> declaracion_variables declaration_initial .)


state 13

    (9) const_declaration -> CONST ID . NUMBER SEMI

    NUMBER          shift and go to state 19


state 14

    (22) uses_declaration -> USES ID . SEMI

    SEMI            shift and go to state 20


state 15

    (1) programa -> PROGRAM ID SEMI declaration_initial BEGIN . declarations END DOT
    (23) declarations -> . write_declaration
    (24) declarations -> . write_declaration declarations
    (25) declarations -> . readln_declaration
    (26) declarations -> . readln_declaration declarations
    (27) declarations -> . declaracion_variables
    (28) declarations -> . declaracion_variables declarations
    (29) declarations -> . stament
    (30) declarations -> . stament declarations
    (31) declarations -> . var_assignation
    (32) declarations -> . var_assignation declarations
    (33) declarations -> . class_declaration
    (34) declarations -> . class_declaration declarations
    (35) declarations -> . functions_declarations
    (36) declarations -> . functions_declarations declarations
    (37) declarations -> . pointer_assignation
    (38) declarations -> . pointer_assignation declarations
    (39) declarations -> . class_assignation
    (40) declarations -> . class_assignation declarations
    (89) write_declaration -> . WRITE LPARENT op_write RPARENT SEMI
    (98) readln_declaration -> . READLN LPARENT ID RPARENT SEMI
    (6) declaracion_variables -> . VAR var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> . VAR var_declaration COLON IP SEMI
    (8) declaracion_variables -> . const_declaration
    (70) stament -> . while_declaration
    (71) stament -> . for_declaration
    (72) stament -> . if_declaration
    (73) stament -> . declarations ID ASSIGN
    (74) stament -> . ID LPARENT declarations RPARENT
    (75) stament -> . BREAK SEMI
    (55) var_assignation -> . array_assignation
    (56) var_assignation -> . op_var ASSIGN arith_operation SEMI
    (57) var_assignation -> . op_var ASSIGN STRINGVAL SEMI
    (58) var_assignation -> . op_var ASSIGN IPVAL SEMI
    (59) var_assignation -> . op_var ASSIGN op_var SEMI
    (44) class_declaration -> . op_empaquetamiento CLASS ID BEGIN class_statements END SEMI
    (118) functions_declarations -> . FUNCTION ID LPARENT parameters RPARENT COLON type_specifier SEMI VAR declaration_function_initial BEGIN declarations END SEMI
    (43) pointer_assignation -> . ID MINUS GT ID SEMI
    (41) class_assignation -> . ID ID EQ NEW ID LPARENT parameters_method RPARENT SEMI
    (42) class_assignation -> . ID ID EQ NEW ID LPARENT RPARENT SEMI
    (9) const_declaration -> . CONST ID NUMBER SEMI
    (76) while_declaration -> . WHILE relation DO BEGIN declarations END SEMI
    (77) for_declaration -> . FOR assignation TO op_var DO BEGIN declarations END SEMI
    (80) if_declaration -> . IF relacion_if THEN BEGIN declarations else_stament END SEMI
    (60) array_assignation -> . ID LBLOCK NUMBER RBLOCK ASSIGN operation SEMI
    (61) array_assignation -> . ID LBLOCK ID RBLOCK ASSIGN operation SEMI
    (62) array_assignation -> . ID LBLOCK array_assignation RBLOCK ASSIGN operation SEMI
    (63) array_assignation -> . array_call
    (99) op_var -> . ID
    (100) op_var -> . NUMBER
    (101) op_var -> . array_call
    (102) op_var -> . function_call
    (53) op_empaquetamiento -> . PUBLIC
    (54) op_empaquetamiento -> . PRIVATE
    (94) array_call -> . ID LBLOCK op_var RBLOCK
    (78) function_call -> . ID LPARENT var_declaration RPARENT

    WRITE           shift and go to state 38
    READLN          shift and go to state 24
    VAR             shift and go to state 10
    ID              shift and go to state 42
    BREAK           shift and go to state 34
    FUNCTION        shift and go to state 33
    CONST           shift and go to state 7
    WHILE           shift and go to state 25
    FOR             shift and go to state 35
    IF              shift and go to state 44
    NUMBER          shift and go to state 22
    PUBLIC          shift and go to state 40
    PRIVATE         shift and go to state 30

    class_assignation              shift and go to state 21
    function_call                  shift and go to state 23
    op_var                         shift and go to state 26
    stament                        shift and go to state 27
    op_empaquetamiento             shift and go to state 28
    var_assignation                shift and go to state 29
    readln_declaration             shift and go to state 31
    array_assignation              shift and go to state 46
    write_declaration              shift and go to state 36
    functions_declarations         shift and go to state 37
    const_declaration              shift and go to state 6
    while_declaration              shift and go to state 43
    declaracion_variables          shift and go to state 39
    pointer_assignation            shift and go to state 41
    for_declaration                shift and go to state 32
    declarations                   shift and go to state 45
    class_declaration              shift and go to state 47
    array_call                     shift and go to state 48
    if_declaration                 shift and go to state 49

state 16

    (6) declaracion_variables -> VAR var_declaration . COLON type_specifier SEMI
    (7) declaracion_variables -> VAR var_declaration . COLON IP SEMI

    COLON           shift and go to state 50


state 17

    (10) var_declaration -> ID .
    (11) var_declaration -> ID . COMMA var_declaration

    COLON           reduce using rule 10 (var_declaration -> ID .)
    RPARENT         reduce using rule 10 (var_declaration -> ID .)
    COMMA           shift and go to state 51


state 18

    (4) declaration_initial -> uses_declaration declaration_initial .

    BEGIN           reduce using rule 4 (declaration_initial -> uses_declaration declaration_initial .)


state 19

    (9) const_declaration -> CONST ID NUMBER . SEMI

    SEMI            shift and go to state 52


state 20

    (22) uses_declaration -> USES ID SEMI .

    USES            reduce using rule 22 (uses_declaration -> USES ID SEMI .)
    VAR             reduce using rule 22 (uses_declaration -> USES ID SEMI .)
    CONST           reduce using rule 22 (uses_declaration -> USES ID SEMI .)
    BEGIN           reduce using rule 22 (uses_declaration -> USES ID SEMI .)


state 21

    (39) declarations -> class_assignation .
    (40) declarations -> class_assignation . declarations
    (23) declarations -> . write_declaration
    (24) declarations -> . write_declaration declarations
    (25) declarations -> . readln_declaration
    (26) declarations -> . readln_declaration declarations
    (27) declarations -> . declaracion_variables
    (28) declarations -> . declaracion_variables declarations
    (29) declarations -> . stament
    (30) declarations -> . stament declarations
    (31) declarations -> . var_assignation
    (32) declarations -> . var_assignation declarations
    (33) declarations -> . class_declaration
    (34) declarations -> . class_declaration declarations
    (35) declarations -> . functions_declarations
    (36) declarations -> . functions_declarations declarations
    (37) declarations -> . pointer_assignation
    (38) declarations -> . pointer_assignation declarations
    (39) declarations -> . class_assignation
    (40) declarations -> . class_assignation declarations
    (89) write_declaration -> . WRITE LPARENT op_write RPARENT SEMI
    (98) readln_declaration -> . READLN LPARENT ID RPARENT SEMI
    (6) declaracion_variables -> . VAR var_declaration COLON type_specifier SEMI
    (7) declaracion_variables -> . VAR var_declaration COLON IP SEMI
    (8) declaracion_variables -> . const_declaration
    (70) stament -> . while_declaration
    (71) stament -> . for_declaration
    (72) stament -> . if_declaration
    (73) stament -> . declarations ID ASSIGN
    (74) stament -> . ID LPARENT declarations RPARENT
    (75) stament -> . BREAK SEMI
    (55) var_assignation -> . array_assignation
    (56) var_assignation -> . op_var ASSIGN arith_operation SEMI
    (57) var_assignation -> . op_var ASSIGN STRINGVAL SEMI
    (58) var_assignation -> . op_var ASSIGN IPVAL SEMI
    (59) var_assignation -> . op_var ASSIGN op_var SEMI
    (44) class_declaration -> . op_empaquetamiento CLASS ID BEGIN class_statements END SEMI
    (118) functions_declarations -> . FUNCTION ID LPARENT parameters RPARENT COLON type_specifier SEMI VAR declaration_function_initial BEGIN declarations END SEMI
    (43) pointer_assignation -> . ID MINUS GT ID SEMI
    (41) class_assignation -> . ID ID EQ NEW ID LPARENT parameters_method RPARENT SEMI
    (42) class_assignation -> . ID ID EQ NEW ID LPARENT RPARENT SEMI
    (9) const_declaration -> . CONST ID NUMBER SEMI
    (76) while_declaration -> . WHILE relation DO BEGIN declarations END SEMI
    (77) for_declaration -> . FOR assignation TO op_var DO BEGIN declarations END SEMI
    (80) if_declaration -> . IF relacion_if THEN BEGIN declarations else_stament END SEMI
    (60) array_assignation -> . ID LBLOCK NUMBER RBLOCK ASSIGN operation SEMI
    (61) array_assignation -> . ID LBLOCK ID RBLOCK ASSIGN operation SEMI
    (62) array_assignation -> . ID LBLOCK array_assignation RBLOCK ASSIGN operation SEMI
    (63) array_assignation -> . array_call
    (99) op_var -> . ID
    (100) op_var -> . NUMBER
    (101) op_var -> . array_call
    (102) op_var -> . function_call
    (53) op_empaquetamiento -> . PUBLIC
    (54) op_empaquetamiento -> . PRIVATE
    (94) array_call -> . ID LBLOCK op_var RBLOCK
    (78) function_call -> . ID LPARENT var_declaration RPARENT

  ! shift/reduce conflict for ID resolved as shift
    RPARENT         reduce using rule 39 (declarations -> class_assignation .)
    END             reduce using rule 39 (declarations -> class_assignation .)
    ELSE            reduce using rule 39 (declarations -> class_assignation .)
    WRITE           shift and go to state 38
    READLN          shift and go to state 24
    VAR             shift and go to state 10
    ID              shift and go to state 42
    BREAK           shift and go to state 34
    FUNCTION        shift and go to state 33
    CONST           shift and go to state 7
    WHILE           shift and go to state 25
    FOR             shift and go to state 35
    IF              shift and go to state 44
    NUMBER          shift and go to state 22
    PUBLIC          shift and go to state 40
    PRIVATE         shift and go to state 30

  ! ID              [ reduce using rule 39 (declarations -> class_assignation .) ]

    class_assignation              shift and go to state 21
    function_call                  shift and go to state 23
    op_var                         shift and go to state 26
    stament                        shift and go to state 27
    op_empaquetamiento             shift and go to state 28
    var_assignation                shift and go to state 29
    readln_declaration             shift and go to state 31
    array_assignation              shift and go to state 46
    write_declaration              shift and go to state 36
    functions_declarations         shift and go to state 37
    const_declaration              shift and go to state 6
    while_declaration              shift and go to state 43
    declaracion_variables          shift and go to state 39
    pointer_assignation            shift and go to state 41
    for_declaration                shift and go to state 32
    declarations                   shift and go to state 53
    class_declaration              shift and go to state 47
    array_call                     shift and go to state 48
    if_declaration                 shift and go to state 49

state 22

    (100) op_var -> NUMBER .
